--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                 <div class="hero-info">
                     <h1>Md. Yasin Ahmed Mahi</h1>
-                    <h4>Flutter Mobile Application Developer</h4>
+                    <h4>Flutter Developer</h4>
                     <p class="hero-paragraph"> An independent app and web developer from Bangladesh, building product
                         and online experiences for companies large and small.</p>
                     <div class="hero-buttons">
