update Field of Projects section

--- a/index.html
+++ b/index.html
@@ -159,57 +159,59 @@
 
         </section>
 
-        <!-- projects section -->
+        <!-- Projects Section -->
         <section class="myProjects" id="projects">
             <div class="myProjects-body container">
                 <div class="section-headers text-center">
-                    <h4>Fields of Projects</h4>
+                    <h4>Filed of Projects</h4>
                     <i class="bi bi-caret-down-fill"></i>
                 </div>
                 <div class="row projectSingle-body">
                     <div class="col-lg-4 col-md-6 singleProject-body">
                         <div class="card singleProject">
                             <img src="assets/images/my_projects/yasin's_flutter_apps.png" class="card-img-top"
-                                alt="Project 1">
+                                alt="Flutter Mobile Applications">
                             <div class="card-body">
                                 <h5 class="card-title">Flutter Mobile Applications</h5>
-                                <p class="card-text">Discover cutting-edge mobile apps built with Flutter, delivering
-                                    sleek designs and powerful functionality. See all the apps that elevate mobile
-                                    experiences.</p>
+                                <p class="card-text">Experience the power of modern mobile solutions through my expertly
+                                    crafted Flutter apps. Each app showcases cutting-edge design, seamless performance,
+                                    and user-centric features. Discover what makes them unique.</p>
                                 <div>
-                                    <a href="#">View in Details</a>
+                                    <a href="#">Explore the Apps</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 singleProject-body">
                         <div class="card singleProject">
-                            <img src="assets/images/my_projects/flutter_dekstop.png" class="card-img-top"
-                                alt="Project 2">
+                            <img src="assets/images/my_projects/web & desktop.png" class="card-img-top"
+                                alt="Web & Desktop Applications">
                             <div class="card-body">
-                                <h5 class="card-title">Flutter Desktop Applications</h5>
-                                <p class="card-text">Explore desktop apps created with Flutter for smooth,
-                                    cross-platform performance. Check out the full collection of feature-rich desktop
-                                    tools.</p>
-                                <a href="#">View in Details</a>
+                                <h5 class="card-title">Websites & Desktop Apps</h5>
+                                <p class="card-text">Unlock the potential of cross-platform desktop applications and
+                                    modern, responsive websites. Designed for efficiency and packed with features, these
+                                    projects are built to elevate user experiences across all devices.</p>
+                                <a href="#">View Full Details</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 singleProject-body">
                         <div class="card singleProject">
-                            <img src="assets/images/my_projects/yasin's_websites.png" class="card-img-top"
-                                alt="Project 3">
+                            <img src="assets/images/my_projects/undergrad.png" class="card-img-top"
+                                alt="Undergraduate Projects">
                             <div class="card-body">
-                                <h5 class="card-title">Web Development</h5>
-                                <p class="card-text">Dive into modern, responsive websites designed to impress. View all
-                                    the web projects showcasing innovation and creativity.</p>
-                                <a href="#">View in Details</a>
+                                <h5 class="card-title">Undergraduate Projects</h5>
+                                <p class="card-text">Take a deep dive into my undergraduate portfolio, where creativity
+                                    meets functionality. These projects blend academic rigor with practical
+                                    problem-solving, offering real-world solutions through innovative technology.</p>
+                                <a href="#">Learn More</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <!-- Call in Actions Section -->
         <section class="dropMessage">
             <div class="dropMessage-body container text-center">
