update project paragraphs

--- a/index.html
+++ b/index.html
@@ -173,11 +173,9 @@
                                 alt="Flutter Mobile Applications">
                             <div class="card-body">
                                 <h5 class="card-title">Flutter Mobile Applications</h5>
-                                <p class="card-text">Experience the power of modern mobile solutions through my expertly
-                                    crafted Flutter apps. Each app showcases cutting-edge design, seamless performance,
-                                    and user-centric features. Discover what makes them unique.</p>
+                                <p class="card-text">Discover my expertly crafted Flutter apps, featuring modern designs and seamless performance that enhance user experiences.</p>
                                 <div>
-                                    <a href="#">Explore the Apps</a>
+                                    <a href="#">View in Details</a>
                                 </div>
                             </div>
                         </div>
@@ -188,10 +186,10 @@
                                 alt="Web & Desktop Applications">
                             <div class="card-body">
                                 <h5 class="card-title">Websites & Desktop Apps</h5>
-                                <p class="card-text">Unlock the potential of cross-platform desktop applications and
-                                    modern, responsive websites. Designed for efficiency and packed with features, these
-                                    projects are built to elevate user experiences across all devices.</p>
-                                <a href="#">View Full Details</a>
+                                <p class="card-text">Explore cross-platform desktop applications and responsive websites designed for efficiency and rich functionality.</p>
+                                <div>
+                                    <a href="#">View in Details</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -201,10 +199,10 @@
                                 alt="Undergraduate Projects">
                             <div class="card-body">
                                 <h5 class="card-title">Undergraduate Projects</h5>
-                                <p class="card-text">Take a deep dive into my undergraduate portfolio, where creativity
-                                    meets functionality. These projects blend academic rigor with practical
-                                    problem-solving, offering real-world solutions through innovative technology.</p>
-                                <a href="#">Learn More</a>
+                                <p class="card-text">Delve into my undergraduate portfolio, showcasing creative solutions that blend academic knowledge with practical technology.</p>
+                                <div>
+                                    <a href="#">View in Details</a>
+                                </div>
                             </div>
                         </div>
                     </div>
