update mailto and wa.me location

--- a/index.html
+++ b/index.html
@@ -332,11 +332,12 @@
                     </div>
                     <div class="footer-contact text-center">
                         <div class="footer-contact-single">
-                            <a href="https://wa.me/+880 1784 305 336"><i class="bi bi-whatsapp"></i>+880 1874 729
+                            <a href="https://wa.me/+880 1874 729
+                            892"><i class="bi bi-whatsapp"></i>+880 1874 729
                                 892</a>
                         </div>
                         <div class="footer-contact-single">
-                            <a href="mailto:tomdyasin@gmail.com"><i class="bi bi-inbox"></i>mdyasinmahii@gmail.com</a>
+                            <a href="mailto:mdyasinmahii@gmail.com"><i class="bi bi-inbox"></i>mdyasinmahii@gmail.com</a>
                         </div>
                     </div>
                 </div>
