update website online judges profile section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
                                 alt="Flutter Mobile Applications">
                             <div class="card-body">
                                 <h5 class="card-title">Flutter Mobile Applications</h5>
-                                <p class="card-text">Discover my expertly crafted Flutter apps, featuring modern designs and seamless performance that enhance user experiences.</p>
+                                <p class="card-text">Discover my expertly crafted Flutter apps, featuring modern designs
+                                    and seamless performance that enhance user experiences.</p>
                                 <div>
                                     <a href="#">View in Details</a>
                                 </div>
@@ -186,7 +187,8 @@
                                 alt="Web & Desktop Applications">
                             <div class="card-body">
                                 <h5 class="card-title">Websites & Desktop Apps</h5>
-                                <p class="card-text">Explore cross-platform desktop applications and responsive websites designed for efficiency and rich functionality.</p>
+                                <p class="card-text">Explore cross-platform desktop applications and responsive websites
+                                    designed for efficiency and rich functionality.</p>
                                 <div>
                                     <a href="#">View in Details</a>
                                 </div>
@@ -199,7 +201,8 @@
                                 alt="Undergraduate Projects">
                             <div class="card-body">
                                 <h5 class="card-title">Undergraduate Projects</h5>
-                                <p class="card-text">Delve into my undergraduate portfolio, showcasing creative solutions that blend academic knowledge with practical technology.</p>
+                                <p class="card-text">Delve into my undergraduate portfolio, showcasing creative
+                                    solutions that blend academic knowledge with practical technology.</p>
                                 <div>
                                     <a href="#">View in Details</a>
                                 </div>
@@ -222,59 +225,60 @@
                 </div>
             </div>
         </section>
+
         <!-- Online Judge Profiles Section -->
-        <section class="myProfiles" id="profiles">
-            <div class="myProfiles-body container">
+        <section class="oj_profiles" id="profiles">
+            <div class="oj_profiles_body container">
                 <div class="section-headers text-center">
                     <h4>Online Judge Profiles</h4>
                     <i class="bi bi-caret-down-fill"></i>
                 </div>
-                <div class="profile-body text-center">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="profile-single">
-                                <div class="profile-single-image">
-                                    <img src="assets/images/oj/hackerrank.png" alt="HackerRank" class="img-fluid">
-                                </div>
-                                <div class="profile-single-button"><a target="_blank"
-                                        href="https://www.hackerrank.com/profile/mdyasiin" class=" "><i
-                                            class="bi bi-person-circle"></i>mdyasiin</a></div>
+                <div class="oj_profiles_contents row">
+                    <div class="col-lg-3 col-md-3 col-sm-6">
+                        <!-- LeetCode Profile -->
+                        <div class="oj_profile_card">
+                            <div class="oj_img img-fluid">
+                                <img src="assets/images/oj/leetcode.png" class="img-fluid" alt="LeetCode Logo">
                             </div>
+                            <h3>LeetCode</h3>
+                            <p>Username: mdyasinahmedmahi</p>
+                            <a href="https://leetcode.com/bcoder123" target="_blank">View Profile</a>
                         </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="profile-single">
-                                <div class="profile-single-image">
-                                    <img src="assets/images/oj/Codeforces.png" alt="HackerRank" class="img-fluid">
-                                </div>
-                                <div class="profile-single-button"><a target="_blank"
-                                        href="https://codeforces.com/profile/mdyasinahmed" class=" "><i
-                                            class="bi bi-person-circle"></i>mdyasinahmed</a></div>
-                            </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6">
+                        <!-- HackerRank Profile -->
+                        <div class="oj_profile_card">
+                            <img src="assets/images/oj/leetcode.svg"
+                                alt="HackerRank Logo">
+                            <h3>HackerRank</h3>
+                            <p>Username: bcoder123</p>
+                            <a href="https://www.hackerrank.com/bcoder123" target="_blank">View Profile</a>
                         </div>
-                        <div class="col-md-6 col-sm-6 d-none">
-                            <div class="profile-single">
-                                <div class="profile-single-image">
-                                    <img src="assets/images/oj/leetcode.svg" alt="HackerRank" class="img-fluid">
-                                </div>
-                                <div class="profile-single-button"><a target="_blank"
-                                        href="https://leetcode.com/mdyasiin/" class=""><i
-                                            class="bi bi-person-circle"></i>mdyasiin</a></div>
-                            </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6">
+                        <!-- Codeforces Profile -->
+                        <div class="oj_profile_card">
+                            <img src="https://sta.codeforces.com/s/46831/images/codeforces-logo-with-telegram.png"
+                                alt="Codeforces Logo">
+                            <h3>Codeforces</h3>
+                            <p>Username: bcoder123</p>
+                            <a href="https://codeforces.com/profile/bcoder123" target="_blank">View Profile</a>
                         </div>
-                        <div class="col-md-6 col-sm-6 d-none">
-                            <div class="profile-single">
-                                <div class="profile-single-image">
-                                    <img src="assets/images/oj/Codechef.png" alt="HackerRank" class="img-fluid">
-                                </div>
-                                <div class="profile-single-button"><a target="_blank"
-                                        href="https://www.codechef.com/users/mdyasinahmed" class=" "><i
-                                            class="bi bi-person-circle"></i>mdyasinahmed</a></div>
-                            </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6">
+                        <!-- CodeChef Profile -->
+                        <div class="oj_profile_card">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Codechef%28new%29logo.png"
+                                alt="CodeChef Logo">
+                            <h3>CodeChef</h3>
+                            <p>Username: bcoder123</p>
+                            <a href="https://www.codechef.com/users/bcoder123" target="_blank">View Profile</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <!-- blog section -->
         <section class="myArticles" id="articles">
             <div class="myArticles-body container">
@@ -337,7 +341,8 @@
                                 892</a>
                         </div>
                         <div class="footer-contact-single">
-                            <a href="mailto:mdyasinmahii@gmail.com"><i class="bi bi-inbox"></i>mdyasinmahii@gmail.com</a>
+                            <a href="mailto:mdyasinmahii@gmail.com"><i
+                                    class="bi bi-inbox"></i>mdyasinmahii@gmail.com</a>
                         </div>
                     </div>
                 </div>
