update portfolio webiste

--- a/index.html
+++ b/index.html
@@ -227,52 +227,25 @@
         </section>
 
         <!-- Online Judge Profiles Section -->
-        <section class="oj_profiles" id="profiles">
+        <section class="oj_profiles d-none" id="profiles">
             <div class="oj_profiles_body container">
                 <div class="section-headers text-center">
                     <h4>Online Judge Profiles</h4>
                     <i class="bi bi-caret-down-fill"></i>
                 </div>
-                <div class="oj_profiles_contents row">
-                    <div class="col-lg-3 col-md-3 col-sm-6">
-                        <!-- LeetCode Profile -->
-                        <div class="oj_profile_card">
-                            <div class="oj_img img-fluid">
-                                <img src="assets/images/oj/leetcode.png" class="img-fluid" alt="LeetCode Logo">
+                <div class="oj_profiles_contents">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="oj_profile_single">
+                                <div class="row text-end">
+                                    <div class="col oj_icon">
+
+                                    </div>
+                                    <div class="col oj_details">
+
+                                    </div>
+                                </div>
                             </div>
-                            <h3>LeetCode</h3>
-                            <p>Username: mdyasinahmedmahi</p>
-                            <a href="https://leetcode.com/bcoder123" target="_blank">View Profile</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6">
-                        <!-- HackerRank Profile -->
-                        <div class="oj_profile_card">
-                            <img src="assets/images/oj/leetcode.svg"
-                                alt="HackerRank Logo">
-                            <h3>HackerRank</h3>
-                            <p>Username: bcoder123</p>
-                            <a href="https://www.hackerrank.com/bcoder123" target="_blank">View Profile</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6">
-                        <!-- Codeforces Profile -->
-                        <div class="oj_profile_card">
-                            <img src="https://sta.codeforces.com/s/46831/images/codeforces-logo-with-telegram.png"
-                                alt="Codeforces Logo">
-                            <h3>Codeforces</h3>
-                            <p>Username: bcoder123</p>
-                            <a href="https://codeforces.com/profile/bcoder123" target="_blank">View Profile</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6">
-                        <!-- CodeChef Profile -->
-                        <div class="oj_profile_card">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Codechef%28new%29logo.png"
-                                alt="CodeChef Logo">
-                            <h3>CodeChef</h3>
-                            <p>Username: bcoder123</p>
-                            <a href="https://www.codechef.com/users/bcoder123" target="_blank">View Profile</a>
                         </div>
                     </div>
                 </div>
