update website landing page, add online judge profiles section and add projects link page

--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
             hero section
         main:
             about section
-            ++ experience/expertise/oj profiles section
-            ++ project
+            oj profiles section
             call-in action
             blog section
         footer:
-            ++ direct contacts
-            ++ socials links
-                
+            direct contacts
+            socials links     
     -->
 
     <!--header section-->
@@ -93,7 +91,6 @@
             </nav>
         </section>
     </header>
-
 
     <!--main section-->
     <main>
@@ -153,10 +150,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
         </section>
 
         <!-- Projects Section -->
@@ -176,7 +169,7 @@
                                 <p class="card-text">Discover my expertly crafted Flutter apps, featuring modern designs
                                     and seamless performance that enhance user experiences.</p>
                                 <div>
-                                    <a href="#">View in Details</a>
+                                    <a href="https://mdyasinahmed.github.io/web.my_projects">View in Details</a>
                                 </div>
                             </div>
                         </div>
@@ -190,7 +183,7 @@
                                 <p class="card-text">Explore cross-platform desktop applications and responsive websites
                                     designed for efficiency and rich functionality.</p>
                                 <div>
-                                    <a href="#">View in Details</a>
+                                    <a href="https://mdyasinahmed.github.io/web.my_projects">View in Details</a>
                                 </div>
                             </div>
                         </div>
@@ -204,7 +197,7 @@
                                 <p class="card-text">Delve into my undergraduate portfolio, showcasing creative
                                     solutions that blend academic knowledge with practical technology.</p>
                                 <div>
-                                    <a href="#">View in Details</a>
+                                    <a href="https://mdyasinahmed.github.io/web.my_projects">View in Details</a>
                                 </div>
                             </div>
                         </div>
@@ -220,14 +213,14 @@
                     <p>It's time to start your project</p>
                     <h2>Drop a <span>Message</span> for any Queries</h2>
                     <p>Let's work together in your upcoming project.</p>
-                    <a class="my-light_button" href="../contact.html"><i class="bi bi-chat-right-text"></i> Send
+                    <a class="my-light_button" href="#"><i class="bi bi-chat-right-text"></i> Send
                         Message</a>
                 </div>
             </div>
         </section>
 
         <!-- Online Judge Profiles Section -->
-        <section class="oj_profiles d-none" id="profiles">
+        <section class="oj_profiles" id="profiles">
             <div class="oj_profiles_body container">
                 <div class="section-headers text-center">
                     <h4>Online Judge Profiles</h4>
@@ -235,14 +228,47 @@
                 </div>
                 <div class="oj_profiles_contents">
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="oj_profile_single">
-                                <div class="row text-end">
-                                    <div class="col oj_icon">
-
+                        <div class="col-md-4 oj_profile_single">
+                            <div class="oj_profile_card text-center">
+                                <div class="oj_details">
+                                    <div class="oj_logo">
+                                        <img src="assets/images/oj/leetcode.png" alt="leetcode" class="img-fluid">
                                     </div>
-                                    <div class="col oj_details">
-
+                                    <div class="oj_profile_single_info">
+                                        <p>I have solved 200+ LeetCode Easy, Medium and Hard problems. Take a tour in...</p>
+                                    </div>
+                                    <div class="oj_profile_single_link">
+                                        <a href="https://leetcode.com/u/myasiin/" class="my-dark_button" target="_blank">leetcode.com/u/myasiin</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 oj_profile_single">
+                            <div class="oj_profile_card text-center">
+                                <div class="oj_details">
+                                    <div class="oj_logo">
+                                        <img src="assets/images/oj/hackerrank.png" alt="leetcode" class="img-fluid">
+                                    </div>
+                                    <div class="oj_profile_single_info">
+                                        <p>I have solved 200+ LeetCode Easy, Medium and Hard problems. Take a tour in...</p>
+                                    </div>
+                                    <div class="oj_profile_single_link">
+                                        <a href="https://www.hackerrank.com/profile/mdyasiin" class="my-dark_button" target="_blank">hackerrank.com/profile/mdyasiin</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 oj_profile_single">
+                            <div class="oj_profile_card text-center">
+                                <div class="oj_details">
+                                    <div class="oj_logo">
+                                        <img src="assets/images/oj/Codeforces.png" alt="leetcode" class="img-fluid">
+                                    </div>
+                                    <div class="oj_profile_single_info">
+                                        <p>I have solved 200+ LeetCode Easy, Medium and Hard problems. Take a tour in...</p>
+                                    </div>
+                                    <div class="oj_profile_single_link">
+                                        <a href="https://codeforces.com/profile/mahi_95" class="my-dark_button" target="_blank">codeforces.com/profile/mahi_95</a>
                                     </div>
                                 </div>
                             </div>
